--- a/index.css
+++ b/index.css
@@ -163,7 +163,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 #titleArea{
-    font-size: 4rem;
+    font-size: 110px;
     font-family: 'Baron';
     font-weight: bold;
     color: #000;
